<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.WelcomeActivity">

    <ImageView
        android:id="@+id/img2"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logobmti"
        android:contentDescription="@string/app_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/welcome_title"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:id="@+id/text1"/>

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:padding="@dimen/spacing_xl"
        android:text="@string/welcome_desc"
        android:textColor="@color/text_secondary"
        android:textSize="@dimen/text_body_large" />

    <Button
        android:id="@+id/btnMasuk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:width="250dp"
        android:height="30dp"
        android:backgroundTint="@color/primary"
        android:text="@string/welcome_masuk"
        android:textColor="@color/white"
        android:textSize="@dimen/text_h3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnMasuk"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/welcome_copyright" />

</RelativeLayout>